[gd_scene load_steps=2 format=3 uid="uid://dvn7i5fi00amr"]

[ext_resource type="Script" path="res://node_2d.gd" id="1_myw55"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_myw55")

[node name="BoxContainer" type="BoxContainer" parent="."]
offset_right = 406.0
offset_bottom = 673.0

[node name="button1" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "convert pdf"

[node name="buttonPrint" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "print pdf"

[node name="labelPdfPath" type="Label" parent="BoxContainer"]
layout_mode = 2
text = "converted pdf path here"

[connection signal="pressed" from="BoxContainer/button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="BoxContainer/buttonPrint" to="." method="_on_button_print_pressed"]
